fixed overflow

--- a/style/main.css
+++ b/style/main.css
@@ -2,6 +2,7 @@ body, html {
   padding:0;
   margin:0;
   width: 100%;
+  overflow-x: hidden;
 }
 body {
   background-color: black;
